edit the index page, create a css file for all style sheets, create a image folder to store all images.

--- a/OneListApplication/OneListApplication/Views/Home/Index.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Index";
 }
-
-<h2>Index</h2>
-
+<div class="mainDiv" >
+    <h2 class="col-lg-4 col-lg-offset-4 col-xs-12" id="title">Welcome to the OneList!</h2>
+    <p class="col-lg-6 col-lg-offset-3 col-xs-12">OneList provides the altimate solution for creating list for multiple people.<p>
+    <input type="button" value="Create An Account" class="col-lg-2 col-lg-offset-3 col-xs-12"/>
+</div>
