Linked List Managment Page

--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -17,7 +17,7 @@
                     <a href="index.html"><i class="fa fa-fw fa-home"></i>Home</a>
                 </li>
                 <li>
-                    <a href="charts.html"><i class="fa fa-fw fa-list-ol"></i>Lists</a>
+                    @Html.ActionLink("List","ListManagement","Home" )
                 </li>
                 <li>
                     <a href="tables.html"><i class="fa fa-fw fa-table"></i>Items</a>
