--- a/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
+++ b/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Home</a></li>
+                    <li>@Html.ActionLink("Home", "Home", "Home")</li>
                     <li><a href="#">Log In</a></li>
                 </ul>
             </div>
