--- a/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
+++ b/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
@@ -8,8 +8,15 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/font-awesome.min.css" rel="stylesheet" />
     <link href="~/Css/index.css" rel="stylesheet" />
+    <!-- Custom CSS for main page sidebar -->
+    <link href="~/Css/sb-admin.css" rel="stylesheet" />
+    <!-- Morris Charts CSS -->
+    <link href="~/Css/morris.css" rel="stylesheet" />
     <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/plugins/morris/raphael.min.js"></script>
+    <script src="~/Scripts/plugins/morris/morris.min.js"></script>
+    <script src="~/Scripts/plugins/morris/morris-data.js"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
