Added Create List Page

--- a/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
@@ -9,8 +9,8 @@
 <h2>List Management</h2>
 
 <ul class="nav nav-pills nav-justified">
-    <li role="presentation" class="active"><a href="#">List Management</a></li>
-    <li role="presentation"><a href="#">Create List</a></li>
+    <li>@Html.ActionLink("List management", "ListManagement", "Home")</li>
+    <li>@Html.ActionLink("Create List", "CreateList", "Home")</li>
     <li role="presentation"><a href="#">Activity Log</a></li>
 </ul>
 
