--- a/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
@@ -22,6 +22,9 @@
             <th>Date</th>
             <th>List Type</th>
             <th>Subscribers</th>
+            <th></th>
+            <th></th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -31,6 +34,10 @@
             <td>June 24, 2016</td>
             <td>Grocery</td>
             <td>Greg, Alan ...</td>
+            <td><button type="button" class="btn btn-primary">Delete</button></td>
+            <td><button type="button" class="btn btn-primary">Edit</button></td>
+            <td><button type="button" class="btn btn-primary">Details</button></td>
+
         </tr>
         <tr>
             <td>2</td>
@@ -38,6 +45,9 @@
             <td>Sep 24, 2016</td>
             <td>To Do</td>
             <td>Alice, Alan ...</td>
+            <td><button type="button" class="btn btn-primary">Delete</button></td>
+            <td><button type="button" class="btn btn-primary">Edit</button></td>
+            <td><button type="button" class="btn btn-primary">Details</button></td>
         </tr>
         <tr>
             <td>3</td>
@@ -45,8 +55,33 @@
             <td>Dec 24, 2016</td>
             <td>Task</td>
             <td>Greg, Alan ...</td>
+            <td><button type="button" class="btn btn-primary">Delete</button></td>
+            <td><button type="button" class="btn btn-primary">Edit</button></td>
+            <td><button type="button" class="btn btn-primary">Details</button></td>
         </tr>
     </tbody>
 </table>
-
+    <nav aria-label="...">
+        <ul class="pagination">
+            <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            <li class="page-item active">
+                <a class="page-link" href="#">1 <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">4</a></li>
+            <li class="page-item"><a class="page-link" href="#">5</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </div>
