--- a/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
@@ -5,7 +5,7 @@
 }
 
 @Html.Partial("~/Views/Home/Sidebar.cshtml");
-<div class="col-sm-offset-2">
+<div id="wrapper">
 <h2>List Management</h2>
 
 <ul class="nav nav-pills nav-justified">
@@ -48,5 +48,4 @@
         </tr>
     </tbody>
 </table>
-
 </div>
