--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -14,7 +14,7 @@
                     <a href="#"><i class="fa fa-fw fa-home"></i>Home</a>
                 </li>
                 <li>
-                    @Html.ActionLink("List", "ListManagement", "Home")
+                    @Html.ActionLink("List", "ListManagement", "List")
                 </li>
                 <li>
                     <a href="tables.html"><i class="fa fa-fw fa-table"></i>Items</a>
