--- a/OneListApplication/OneListApplication/Views/Home/CreateList.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/CreateList.cshtml
@@ -7,9 +7,10 @@
 <div class="col-sm-offset-2">
     <h2>CreateList</h2>
     <ul class="nav nav-pills nav-justified">
-        <li class="nav-item">@Html.ActionLink("List management", "ListManagement", "Home", new { @class = "nav-link active"})</li>
-        <li class="nav-item">@Html.ActionLink("Create List", "CreateList", "Home", new { @class = "nav-link"})</li>
-        <li class="nav-item"><a href="#">Activity Log</a></li>
+        <li class="nav-item">@Html.ActionLink("Open Lists", "ListManagement", "List", new { @class = "nav-link active"})</li>
+        <li class="nav-item">@Html.ActionLink("Create List", "CreateList", "List", new { @class = "nav-link"})</li>
+        <li class="nav-item"><a href="#">Completed Lists</a></li>
+        <li class="nav-item"><a href="#">Subscribed Lists</a></li>
     </ul>
     <form>
         <div class="form-group">
