--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -19,9 +19,36 @@
             </div>
             <!-- /.row -->
             <div class="row">
-                <div class="col-lg-12">
-                    
-                </div>
+                    <div class="col-md-4 col-sm-12" >
+                        <h4>Your Current Opening Lists</h4>
+                        <ul>
+                            <li><a href="#">Office supply list</a></li>
+                            <li><a href="#">X-Max gift list</a></li>
+                            <li><a href="#">This week grocery list</a></li>
+                            <li><a href="#">Christmas party list</a></li>
+                        </ul>
+                        <a href="#">View More <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                    <div class="col-md-4 col-sm-12">
+                        <h4>Your Subscribed Lists</h4>
+                        <ul>
+                            <li><a href="#">SSD friday party food list</a></li>
+                            <li><a href="#">November home renovation list</a></li>
+                            <li><a href="#">December banff trip prep list</a></li>
+                            <li><a href="#">December 17th family dinner list</a></li>
+                        </ul>
+                        <a href="#">View More <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                    <div class="col-md-4 col-sm-12">
+                        <h4>Your Completed Lists</h4>
+                        <ul>
+                            <li><a href="#">Black friday shopping list</a></li>
+                            <li><a href="#">Thomas wedding supply list</a></li>
+                            <li><a href="#">Christmas shopping lsit </a></li>
+                            <li><a href="#">Mom's visiting trip list</a></li>
+                        </ul>
+                        <a href="#">View More <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
             </div>
             <!-- /.row -->
             <div class="row">
@@ -47,35 +74,31 @@
                             <div class="list-group">
                                 <a href="#" class="list-group-item">
                                     <span class="badge">just now</span>
-                                    <i class="fa fa-fw fa-calendar"></i> Calendar updated
+                                    List status updated
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">4 minutes ago</span>
-                                    <i class="fa fa-fw fa-comment"></i> Commented on a post
+                                    Complete a list item
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">23 minutes ago</span>
-                                    <i class="fa fa-fw fa-truck"></i> Order 392 shipped
+                                    Invite people to a list
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">46 minutes ago</span>
-                                    <i class="fa fa-fw fa-money"></i> Invoice 653 has been paid
+                                    Assign a collaborator of a list
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">1 hour ago</span>
-                                    <i class="fa fa-fw fa-user"></i> A new user has been added
+                                    Subscribe a new list
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">2 hours ago</span>
-                                    <i class="fa fa-fw fa-check"></i> Completed task: "pick up dry cleaning"
+                                    Become a collaborator of a list 
                                 </a>
                                 <a href="#" class="list-group-item">
                                     <span class="badge">yesterday</span>
-                                    <i class="fa fa-fw fa-globe"></i> Saved the world
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <span class="badge">two days ago</span>
-                                    <i class="fa fa-fw fa-check"></i> Completed task: "fix error on sales page"
+                                    Complete a list
                                 </a>
                             </div>
                             <div class="text-right">
