--- a/OneListApplication/OneListApplication/Views/Home/Sidebar.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Sidebar.cshtml
@@ -4,7 +4,7 @@
             @Html.ActionLink("Home", "Home", "Home")
         </li>
         <li>
-            @Html.ActionLink("List", "ListManagement", "List")
+            @Html.ActionLink("List", "ListManagement", "Home")
         </li>
         <li>
             <a href="tables.html"><i class="fa fa-fw fa-table"></i>Items</a>
