--- a/OneListApplication/OneListApplication/Views/List/CreateList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/CreateList.cshtml
@@ -3,12 +3,13 @@
     ViewBag.Title = "CreateList";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 @Html.Partial("~/Views/Home/Sidebar.cshtml");
 <div class="col-sm-offset-2">
     <h2>CreateList</h2>
     <ul class="nav nav-pills nav-justified">
-        <li class="nav-item">@Html.ActionLink("Open Lists", "ListManagement", "List", new { @class = "nav-link active"})</li>
-        <li class="nav-item">@Html.ActionLink("Create List", "CreateList", "List", new { @class = "nav-link"})</li>
+        <li class="nav-item">@Html.ActionLink("Open Lists", "ListManagement", "Home", new { @class = "nav-link active" })</li>
+        <li class="nav-item">@Html.ActionLink("Create List", "CreateList", "List", new { @class = "nav-link" })</li>
         <li class="nav-item"><a href="#">Completed Lists</a></li>
         <li class="nav-item"><a href="#">Subscribed Lists</a></li>
     </ul>
@@ -49,7 +50,7 @@
         </div>
         <div class="form-group">
             <label for="itemTextarea" class="col-xs-2 col-form-label">Items</label>
-            <div class="col-xs-10"> 
+            <div class="col-xs-10">
                 <textarea class="form-control" id="itemTextarea" rows="4"></textarea>
             </div>
         </div>
@@ -57,5 +58,5 @@
         <div class="col-xs-10">
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
-</form>
+    </form>
 </div>
