--- a/OneListApplication/OneListApplication/Views/Home/Home.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Home.cshtml
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <!-- /.row -->
-            <div class="row">
+            <div class="row" id="listType">
                     <div class="col-md-4 col-sm-12" >
                         <h4>Your Current Opening Lists</h4>
                         <ul>
@@ -120,7 +120,7 @@
                         </div>
                     </div>
                 </div>
-        </div>
+            </div>
         <!-- /.container-fluid -->
     </div>
     <!-- /#page-wrapper -->
