--- a/OneListApplication/OneListApplication/Views/List/ShowListDetails.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowListDetails.cshtml
@@ -10,8 +10,8 @@
     <ul class="nav nav-pills nav-justified">
         <li class="nav-item">@Html.ActionLink("Open Lists", "ListManagement", "Home", new { @class = "nav-link active"}, null)</li>
         <li class="nav-item">@Html.ActionLink("Create List", "CreateList", "List", new { @class = "nav-link"},null)</li>
-        <li class="nav-item"><a href="#">Completed Lists</a></li>
-        <li class="nav-item"><a href="#">Subscribed Lists</a></li>
+        <li class="nav-item">@Html.ActionLink("Completed Lists", "ShowCompleteList", "List", new { @class = "nav-link" }, null)</li>
+        <li class="nav-item">@Html.ActionLink("Subscribed Lists", "ShowSubscribedList", "List", new { @class = "nav-link" }, null)</li>
     </ul>
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="#">Home</a></li>
