--- a/OneListApplication/OneListApplication/Views/Home/Sidebar.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Sidebar.cshtml
@@ -13,7 +13,7 @@
             <a href="forms.html"><i class="fa fa-fw fa-users"></i>Subscriber</a>
         </li>
         <li>
-            <a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i>Profile</a>
+            @Html.ActionLink("Profile", "Index", "Profile")
         </li>
     </ul>
 </div>
