--- a/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/ListManagement.cshtml
@@ -37,7 +37,7 @@
                 <td>Greg, Alan ...</td>
                 <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
                 <td><a class="btn btn-primary" href="#" role="button">Edit</a></td>
-                <td>@Html.ActionLink("Details", "ShowListDetails", "List", new { @class = "btn btn-primary" }, null)</td>
+                <td>@Html.ActionLink("Details", "ShowListDetails", "List", null, new { @class = "btn btn-primary" })</td>
             </tr>
             <tr>
                 <td>2</td>
@@ -47,7 +47,7 @@
                 <td>Alice, Alan ...</td>
                 <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
                 <td><a class="btn btn-primary" href="#" role="button">Edit</a></td>
-                <td>@Html.ActionLink("Details", "ShowListDetails", "List", new { @class = "btn btn-primary" }, null)</td>
+                <td>@Html.ActionLink("Details", "ShowListDetails", "List", null, new { @class = "btn btn-primary" })</td>
             </tr>
             <tr>
                 <td>3</td>
@@ -57,7 +57,7 @@
                 <td>Greg, Alan ...</td>
                 <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
                 <td><a class="btn btn-primary" href="#" role="button">Edit</a></td>
-                <td>@Html.ActionLink("Details", "ShowListDetails", "List", new { @class = "btn btn-primary" }, null)</td>
+                <td>@Html.ActionLink("Details", "ShowListDetails", "List", null, new { @class = "btn btn-primary" })</td>
             </tr>
         </tbody>
     </table>
