--- a/OneListApplication/OneListApplication/Views/Subscriber/SubGroupDetails.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/SubGroupDetails.cshtml
@@ -28,6 +28,6 @@
         </tbody>
     </table>
   
-   @Html.ActionLink("Back to Subscriber Groups", "SubscriberManagement", "Home", new { @class = "btn btn-primary" }, null)
+   @Html.ActionLink("Back to Subscriber Groups", "SubscriberManagement", "Home", null, new { @class = "btn btn-primary" })
 
 </div>
