--- a/OneListApplication/OneListApplication/Views/List/CreateList.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/CreateList.cshtml
@@ -22,6 +22,18 @@
             </div>
         </div>
         <div class="form-group">
+            <label for="selectListType" class="col-xs-2 col-form-label">Select List Type</label>
+            <div class="col-xs-10">
+                <select class="form-control" id="selectListType">
+                    <option>Basic</option>
+                    <option>Grocery</option>
+                    <option>To Do</option>
+                    <option>Task</option>
+                </select>
+                <small id="titleHelp" class="form-text text-muted">*Required</small>
+            </div>
+        </div>
+        <div class="form-group">
             <label for="selectItemGroup" class="col-xs-2 col-form-label">Select Item Group</label>
             <div class="col-xs-10">
                 <select class="form-control" id="selectItemGroup">
