--- a/OneListApplication/OneListApplication/Views/Profile/Index.cshtml
+++ b/OneListApplication/OneListApplication/Views/Profile/Index.cshtml
@@ -9,7 +9,7 @@
 <div class="col-sm-offset-2">
     <h2>Profile Information</h2>
     <h3 for="selectItemGroup" style="float:left; width:100%; text-align:center">Information Details</h3>
-    <img src="https://www.bcitfsa.ca/wp-content/uploads/2016/03/paul_mills.jpg" style="float:left ; width:50%; width:200px; height:200px;"/>
+    <img src="../images/paul_mills.jpg" style="float:left ; width:50%; width:200px; height:200px;"/>
     <table class="table table-inverse" style="float:left ; width:50%">
         <thead>
             <tr>
