--- a/OneListApplication/OneListApplication/Views/Subscriber/EditSubGroup.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/EditSubGroup.cshtml
@@ -43,8 +43,8 @@
             </tbody>
         </table>
         <div class="col-xs-10">
-            <button type="submit" class="btn btn-primary">Save Changes</button>
+            @Html.ActionLink("Save Changes", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })
         </div>
     </form>
-
+   
 </div>
