--- a/OneListApplication/OneListApplication/Views/Home/SubscriberManagement.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/SubscriberManagement.cshtml
@@ -8,7 +8,7 @@
 
 <div class="col-sm-offset-2">
     <h2>Subscriber Management</h2>
-    @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml");
+    @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml")
 
     <table class="table">
         <thead>
@@ -16,9 +16,7 @@
                 <th>Subscriber Group ID</th>
                 <th>Group Name</th>
                 <th>Date</th>
-                <th></th>
-                <th></th>
-                <th></th>
+                <th colspan="3"></th>
             </tr>
         </thead>
         <tbody>
@@ -26,25 +24,31 @@
                 <td>S1</td>
                 <td>Family</td>
                 <td>June 24, 2016</td>
-                <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
-                <td>@Html.ActionLink("Edit", "EditSubGroup", "Subscriber", null, new { @class = "btn btn-primary" })</td>
-                <td>@Html.ActionLink("Details", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })</td>
+                <td>
+                    <a class="btn btn-primary" href="#" role="button">Delete</a>
+                    @Html.ActionLink("Edit", "EditSubGroup", "Subscriber", null, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Details", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })
+                </td>
             </tr>
             <tr>
                 <td>S2</td>
                 <td>Students</td>
                 <td>Sep 24, 2016</td>
-                <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
-                <td>@Html.ActionLink("Edit", "EditSubGroup", "Subscriber", null, new { @class = "btn btn-primary" })</td>
-                <td>@Html.ActionLink("Details", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })</td>
+                <td>
+                    <a class="btn btn-primary" href="#" role="button">Delete</a>
+                    @Html.ActionLink("Edit", "EditSubGroup", "Subscriber", null, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Details", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })
+                </td>
             </tr>
             <tr>
                 <td>S3</td>
                 <td>Friends</td>
                 <td>Dec 24, 2016</td>
-                <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
-                <td>@Html.ActionLink("Edit", "EditSubGroup", "Subscriber", null, new { @class = "btn btn-primary" })</td>
-                <td>@Html.ActionLink("Details", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })</td>
+                <td>
+                    <a class="btn btn-primary" href="#" role="button">Delete</a>
+                    @Html.ActionLink("Edit", "EditSubGroup", "Subscriber", null, new { @class = "btn btn-primary" })
+                    @Html.ActionLink("Details", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })
+                </td>
             </tr>
         </tbody>
     </table>
