--- a/OneListApplication/OneListApplication/Views/Subscriber/AddSubscriber.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/AddSubscriber.cshtml
@@ -7,8 +7,8 @@
 @Html.Partial("~/Views/Home/Sidebar.cshtml");
 
 <div class="col-sm-offset-2">
-    <h2>Add New Subscriber</h2>
-    @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml");
+    <h2>Add New Subscriber Group</h2>
+    @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml")
     <form>
         <div class="form-group">
             <label for="group-title" class="col-xs-2 col-form-label">Group Title</label>
@@ -18,20 +18,16 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="subscriberTextarea" class="col-xs-2 col-form-label">Subscribers</label>
+            <label for="notesTextarea" class="col-xs-2 col-form-label">Group Description</label>
             <div class="col-xs-10">
-                <textarea class="form-control" id="subscriberTextarea" rows="4"></textarea>
+                <textarea class="form-control" id="notesTextarea" rows="2"></textarea>
             </div>
         </div>
-        <div class="form-group">
-            <label for="notesTextarea" class="col-xs-2 col-form-label">Notes</label>
-            <div class="col-xs-10">
-                <textarea class="form-control" id="notesTextarea" rows="4"></textarea>
-            </div>
-        </div>
+
         <label for="itemTextarea" class="col-xs-2 col-form-label"></label>
         <div class="col-xs-10">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-primary">Cancel</button>
         </div>
 
     </form>
