--- a/OneListApplication/OneListApplication/Views/Subscriber/EditSubGroup.cshtml
+++ b/OneListApplication/OneListApplication/Views/Subscriber/EditSubGroup.cshtml
@@ -7,7 +7,7 @@
 
 <div class="col-sm-offset-2">
     <h2>Edit Subscriber Group</h2>
-    @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml");
+    @Html.Partial("~/Views/Subscriber/SubscriberTab.cshtml")
 
     <form>
         <div class="form-group">
@@ -16,35 +16,63 @@
                 <input type="text" class="form-control" id="list-title" value="Family">
             </div>
         </div>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Subscriber Name</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Greg Willow</td>
-                    <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
-                    <td><a class="btn btn-primary" href="#" role="button">Convert to Collaborator</a></td>
-                </tr>
-                <tr>
-                    <td>Alan Wong</td>
-                    <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
-                    <td><a class="btn btn-primary" href="#" role="button">Convert to Collaborator</a></td>
-                </tr>
-                <tr>
-                    <td>Alice Smith</td>
-                    <td><a class="btn btn-primary" href="#" role="button">Delete</a></td>
-                    <td><a class="btn btn-primary" href="#" role="button">Convert to Collaborator</a></td>
-                </tr>
-            </tbody>
-        </table>
-        <div class="col-xs-10">
-            @Html.ActionLink("Save Changes", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })
+        <div class="form-group">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>Subscriber Name</th>
+                        <th>Status</th>
+                        <th colspan="2"></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Greg Willow</td>
+                        <td>Subscriber</td>
+                        <td>
+                            <a class="btn btn-primary" href="#" role="button">Delete</a>
+                            <a class="btn btn-primary" href="#" role="button">Convert to Collaborator</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Alan Wong</td>
+                        <td>Subscriber</td>
+                        <td>
+                            <a class="btn btn-primary" href="#" role="button">Delete</a>
+                            <a class="btn btn-primary" href="#" role="button">Convert to Collaborator</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>Alice Smith</td>
+                        <td>Collaborator</td>
+                        <td>
+                            <a class="btn btn-primary" href="#" role="button">Delete</a>
+                            <a class="btn btn-primary" href="#" role="button">Convert to Subscriber</a>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-    </form>
+
+        <div class="form-group">
+            <label for="inviteTextarea" class="col-xs-2 col-form-label">Invite Subscriber</label>
+            <div class="col-xs-5">
+                <textarea class="form-control" id="inviteTextarea" rows="1" placeholder="Enter name or email address..."></textarea>
+                
+            </div>
+            <div class="col-xs-5">
+                @Html.ActionLink("Send Invitation", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-primary" })
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="note-detail" class="col-xs-2 col-form-label">Invitation Message</label>
+            <div class="col-xs-10">
+                <textarea class="form-control" id="note-detail" rows="2"></textarea>
+            </div>
+        </div>
+        <div class="col-xs-10">
+            @Html.ActionLink("Save Changes", "SubGroupDetails", "Subscriber", null, new { @class = "btn btn-success" })
+        </div>
+</form>
    
 </div>
