--- a/OneListApplication/OneListApplication/Views/List/ShowListDetails.cshtml
+++ b/OneListApplication/OneListApplication/Views/List/ShowListDetails.cshtml
@@ -23,23 +23,29 @@
         <thead class="thead-inverse">
             <tr>
                 <th>List Item</th>
+                <th>Price</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>Avacado x 2</td>
+                <td>$2.50</td>
             </tr>
             <tr>
                 <td>Paper towel x 9</td>
+                <td>$2.50</td>
             </tr>
             <tr>
                 <td>Oranges</td>
+                <td>$9.99</td>
             </tr>
             <tr>
                 <td>Cake Mix</td>
+                <td>$13.50</td>
             </tr>
             <tr>
                 <td>Whip Cream</td>
+                <td>$15.00</td>
             </tr>
         </tbody>
     </table>
@@ -47,17 +53,21 @@
         <thead class="thead-default">
             <tr>
                 <th>Subscriber</th>
+                <th>Status</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>Greg Willow</td>
+                <td>Subscriber</td>
             </tr>
             <tr>
                 <td>Alan Wong</td>
+                <td>Subscriber</td>
             </tr>
             <tr>
                 <td>Alice Smith</td>
+                <td>Collaborator</td>
             </tr>
         </tbody>
     </table>
