finish the item pages, link welcome page, login pages with others.

--- a/OneListApplication/OneListApplication/Views/Home/Login.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Login.cshtml
@@ -18,7 +18,7 @@
                 <input type="email" class="form-control" placeholder="Email address" required ><br>
                 <input type="password" class="form-control" placeholder="Create Password" required><br>
                 <input type="password" class="form-control" placeholder="Comfirm Password" required><br>
-                <button class="btn btn-lg btn-info btn-signin" type="submit">Register</button><br />
+                <button class="btn btn-primary btn-signin" type="submit">Register</button><br />
             </form>
         </div>
         <div class="tab-pane" id="login">
@@ -31,7 +31,7 @@
                     <input type="checkbox" value="remember-me"> Remember me
                 </label>
             </div>
-            <button class="btn btn-lg btn-info btn-signin" type="submit">Sign in</button><br />
+            <button class="btn btn-primary btn-signin" type="submit">Sign in</button><br />
             <a href="#" class="forgot-password">Forgot the password?</a>
         </form>
         </div>
