--- a/OneListApplication/OneListApplication/Views/Home/Sidebar.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Sidebar.cshtml
@@ -7,7 +7,7 @@
             @Html.ActionLink(" List", "ListManagement", "Home", null, new { @class = "glyphicon glyphicon-list" })
         </li>
         <li>
-            <a href="tables.html"><i class="fa fa-fw fa-table"></i>Items</a>
+            @Html.ActionLink(" Items", "ItemManagement", "Item", null, new { @class = "glyphicon glyphicon-th" })
         </li>
         <li>
             @Html.ActionLink(" Subscriber", "SubscriberManagement", "Home", null, new {@class= "glyphicon glyphicon-user" })
