--- a/OneListApplication/OneListApplication/Views/Home/Index.cshtml
+++ b/OneListApplication/OneListApplication/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 <div class="mainDiv" >
     <h2 class="col-lg-4 col-lg-offset-4 col-xs-12" id="title">Welcome to the OneList!</h2>
     <p class="col-lg-6 col-lg-offset-3 col-xs-12">OneList provides the altimate solution for creating list for multiple people.<p>
-    <button type="button" class="btn btn-info col-lg-2 col-lg-offset-3 col-xs-12">Create An Account</button>
+    <a class="btn btn-primary col-lg-2 col-lg-offset-3 col-xs-12" href="Login">Create An Account</a>
 
 </div>
