--- a/OneListApplication/OneListApplication/Views/Item/ItemDetail.cshtml
+++ b/OneListApplication/OneListApplication/Views/Item/ItemDetail.cshtml
@@ -1,12 +1,14 @@
 ﻿
 @{
-    ViewBag.Title = "CreateItem";
+    ViewBag.Title = "ItemDetail";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+
 @Html.Partial("~/Views/Home/Sidebar.cshtml");
 
 <div id="wrapper">
-    <h2>Create Item</h2>
+    <h2>Edit Item</h2>
     <ul class="nav nav-pills nav-justified">
         <li class="nav-item">@Html.ActionLink("Avaliable Items", "ItemManagement", "Item", new { @class = "nav-link active" }, null)</li>
         <li class="nav-item">@Html.ActionLink("Create Item", "CreateItem", "Item", new { @class = "nav-link" }, null)</li>
@@ -17,20 +19,20 @@
         <div class="form-group">
             <label for="list-title" class="col-xs-2 col-form-label">Item Name</label>
             <div class="col-xs-10">
-                <input type="text" class="form-control" id="list-title" aria-describedby="emailHelp" placeholder="Enter name" required>
+                <input type="text" class="form-control" id="list-title" aria-describedby="emailHelp" placeholder="Tomato" required>
             </div>
-        </div><br />
+        </div><br/>
         <div class="form-group">
             <label for="list-title" class="col-xs-2 col-form-label">Item Price</label>
             <div class="col-xs-10">
-                <input type="number" class="form-control" id="list-title" aria-describedby="emailHelp" placeholder="Enter price">
+                <input type="number" class="form-control" id="list-title" aria-describedby="emailHelp" placeholder="$1.5">
             </div>
         </div><br />
         <div class="form-group">
             <label for="selectItemGroup" class="col-xs-2 col-form-label">Select Item Group</label>
             <div class="col-xs-10">
                 <select class="form-control" id="selectItemGroup">
-                    <option>Grocery Items</option>
+                    <option selected="selected">Grocery Items</option>
                     <option>Stationary</option>
                     <option>Bill Items</option>
                 </select>
@@ -39,11 +41,11 @@
         <div class="form-group">
             <label for="subscriberTextarea" class="col-xs-2 col-form-label">Description</label>
             <div class="col-xs-10">
-                <textarea class="form-control" id="subscriberTextarea" rows="4"></textarea>
+                <textarea class="form-control" id="subscriberTextarea" rows="4">Small size, roman tomato</textarea>
             </div>
         </div><br />
         <div class="col-xs-10">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Update</button>
         </div>
     </form>
 </div>
