--- a/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
+++ b/OneListApplication/OneListApplication/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
                     <li>@Html.ActionLink("Home", "Home", "Home")</li>
-                    <li><a href="#">Log In</a></li>
+                    <li>@Html.ActionLink("Log In", "Login", "Home")</li>
                 </ul>
             </div>
         </div>
